configs/service.yml
apiVersion: v1
kind: Service
metadata:
    name: docker-kuber-service
spec:
    selector: 
        env: dev
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
