configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kuber-ingress
spec:
    ingressClassName: nginx
    rules:
    - host: arch.homework
      http: 
        paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
                name: docker-kuber-service
                port: 
                    number: 80
